umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetyl-iodide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "{CH3v1}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{I/3v1}"
    bonds:
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "{CH3v1}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{I/3v1}"
    bonds:
      - "-"
      - "="
      - "-"
