umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_beta-lactam.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpS
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1H1v2}"
      - "{Cv4}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpS
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1H1v2}"
      - "{Cv4}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
