umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_cyclohexanecarboxylic-acid.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 9
    bond_count: 9
    topology: "HwA@@`G"
    atoms:
      - "C#h#v3"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#v4"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
      - "O#h#n2#v"
      - "C#h2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 9
    bond_count: 9
    topology: "HwA@@`G"
    atoms:
      - "C#h#v3"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#v4"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
      - "O#h#n2#v"
      - "C#h2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
      - "-"
